More fixes regarding dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,11 @@ a {
 	cursor: pointer;
 }
 
+::selection {
+	background: var(--primary-color);
+	color: var(--secondary-color);
+}
+
 #root {
 	display: flex;
 	flex-direction: column;
